[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/gui/CombatControls.gd" type="Script" id=1]

[node name="CombatControls" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -205.0
margin_bottom = -5.0
rect_min_size = Vector2( 320, 200 )

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ControlsStep1" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 300, 180 )

[node name="ColorRect" type="ColorRect" parent="Control/ControlsStep1"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.905882, 0.552941, 0.552941, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/ControlsStep1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -30.0

[node name="MessageLabel" type="RichTextLabel" parent="Control/ControlsStep1/ScrollContainer"]
margin_right = 280.0
margin_bottom = 150.0
rect_min_size = Vector2( 280, 150 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true

[node name="NextBtn" type="Button" parent="Control/ControlsStep1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.5
margin_top = -23.0
margin_right = 26.5
margin_bottom = -2.0
text = "MÃ¡s"

[node name="ControlsStep2" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 300, 180 )

[node name="ColorRect2" type="ColorRect" parent="Control/ControlsStep2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.439216, 0.819608, 1 )

[node name="FightBtn" type="Button" parent="Control/ControlsStep2"]
margin_left = 11.0
margin_top = 5.0
margin_right = 141.0
margin_bottom = 85.0
text = "Pelear"

[node name="ItemsBtn" type="Button" parent="Control/ControlsStep2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -85.0
margin_right = -9.0
margin_bottom = -5.0
disabled = true
text = "Items"

[node name="StatsBtn" type="Button" parent="Control/ControlsStep2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -290.0
margin_top = 5.0
margin_right = -160.0
margin_bottom = 85.0
text = "Estado"

[node name="SurrenderBtn" type="Button" parent="Control/ControlsStep2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -139.0
margin_top = 5.0
margin_right = -9.0
margin_bottom = 85.0
disabled = true
text = "Rendirse"

[node name="ControlsStep3" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 300, 180 )

[node name="ColorRect3" type="ColorRect" parent="Control/ControlsStep3"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.372549, 0.811765, 0.266667, 1 )

[node name="Move1Btn" type="Button" parent="Control/ControlsStep3"]
visible = false
margin_left = 15.0
margin_top = 6.0
margin_right = 140.0
margin_bottom = 86.0
clip_text = true

[node name="Label" type="Label" parent="Control/ControlsStep3/Move1Btn"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 125, 80 )
align = 1
valign = 1
autowrap = true

[node name="Move2Btn" type="Button" parent="Control/ControlsStep3"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -84.0
margin_right = -14.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="Control/ControlsStep3/Move2Btn"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 125, 80 )
align = 1
valign = 1
autowrap = true

[node name="Move3Btn" type="Button" parent="Control/ControlsStep3"]
visible = false
margin_left = 15.0
margin_top = 94.0
margin_right = 140.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="Control/ControlsStep3/Move3Btn"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 125, 80 )
align = 1
valign = 1
autowrap = true

[node name="Move4Btn" type="Button" parent="Control/ControlsStep3"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -139.0
margin_top = 4.0
margin_right = -14.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="Control/ControlsStep3/Move4Btn"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 125, 80 )
align = 1
valign = 1
autowrap = true

[node name="BackFrom3Btn" type="Button" parent="Control/ControlsStep3"]
margin_left = 290.0
margin_top = -11.0
margin_right = 310.0
margin_bottom = 10.0
text = "x"

[node name="ControlsStep4" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 300, 180 )

[node name="ColorRect" type="ColorRect" parent="Control/ControlsStep4"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.282353, 0.313726, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/ControlsStep4"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MessageLabel" type="RichTextLabel" parent="Control/ControlsStep4/ScrollContainer"]
margin_right = 280.0
margin_bottom = 170.0
rect_min_size = Vector2( 280, 170 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true

[node name="BackFrom4Btn" type="Button" parent="Control/ControlsStep4"]
margin_left = 290.0
margin_top = -11.0
margin_right = 310.0
margin_bottom = 10.0
text = "x"

[node name="Unaviable" type="Control" parent="."]
visible = false
margin_left = -4.0
margin_top = 430.0
margin_right = 326.0
margin_bottom = 639.0

[node name="ColorRect" type="ColorRect" parent="Unaviable"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 0.32549 )

[connection signal="pressed" from="Control/ControlsStep1/NextBtn" to="." method="_on_NextBtn_pressed"]
[connection signal="pressed" from="Control/ControlsStep2/FightBtn" to="." method="_on_FightBtn_pressed"]
[connection signal="pressed" from="Control/ControlsStep2/StatsBtn" to="." method="_on_StatsBtn_pressed"]
[connection signal="pressed" from="Control/ControlsStep2/SurrenderBtn" to="." method="_on_SurrenderBtn_pressed"]
[connection signal="pressed" from="Control/ControlsStep3/Move1Btn" to="." method="_on_Move1Btn_pressed"]
[connection signal="pressed" from="Control/ControlsStep3/Move2Btn" to="." method="_on_Move2Btn_pressed"]
[connection signal="pressed" from="Control/ControlsStep3/Move3Btn" to="." method="_on_Move3Btn_pressed"]
[connection signal="pressed" from="Control/ControlsStep3/Move4Btn" to="." method="_on_Move4Btn_pressed"]
[connection signal="pressed" from="Control/ControlsStep3/BackFrom3Btn" to="." method="_on_BackFrom3Btn_pressed"]
[connection signal="pressed" from="Control/ControlsStep4/BackFrom4Btn" to="." method="_on_BackFrom4Btn_pressed"]
